# urdfyong_arm

./: .gitignore  README.md
dm_motor_demo/: CMakeLists.txt  build.sh  dm_motor_demo.cpp  dmusb_direct.cpp
docs/: rdk-x5-deployment.md  stage1-summary-2026-06-23.md
scripts/: deploy_rdk_x5_humble.sh
tests/: test_deploy_rdk_x5_script.py
u2can/: CMakeLists.txt  README.md  USAGE.md
u2can/include/: damiao.h
u2can/src/: set_zero_test.cpp  test_3rads.cpp  test_damiao.cpp
urdfyong/: CMakeLists.txt  README.md  package.xml
urdfyong/config/: urdfyong.rviz
urdfyong/launch/: display.launch.py
urdfyong/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL
urdfyong/urdf/: urdfyong.csv  urdfyong.urdf  urdfyong_hardware.urdf
urdfyong_hardware/: CMakeLists.txt  hardware_plugin.xml  package.xml
urdfyong_hardware/config/: hardware_controllers.yaml
urdfyong_hardware/include/urdfyong_hardware/: dm_motor_hardware.hpp
urdfyong_hardware/launch/: hardware_moveit.launch.py
urdfyong_hardware/scripts/: trajectory_executor.py
urdfyong_hardware/src/: dm_motor_hardware.cpp
urdfyong_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
urdfyong_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  urdfyong.srdf
urdfyong_moveit_config/launch/: demo.launch.py  gazebo_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
