<package format="3">
  <name>urdfyong</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for urdfyong</p>
    <p>This package contains configuration data, 3D models and launch files
for urdfyong robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>