<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>urdfyong_hardware</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface for 6-axis robotic arm using DM-series motors (DM4310/DM8009P) via USB2CANFD</description>

  <maintainer email="18588995616@163.com">hibikip</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
